--- a/index.html
+++ b/index.html
@@ -1,21 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 
-    <link rel="shortcut icon" href="./images/imgi_1_CardifyLogo.png" type="image/x-icon">
-    <link href="https://fonts.cdnfonts.com/css/poppins" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/poppins" rel="stylesheet" />
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
+      crossorigin="anonymous"
+    />
 
-    <link rel="stylesheet" href="./landingpage.css">
-</head>
-<body>
-    
-</body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./landingpage.css" />
+  </head>
+  <body>
+    <!-- HEADER -->
+
+    <header>
+      <nav class="nav-links">
+        <a href=""
+          ><img src="./images/cardify-logo.png" alt="" width="150px"
+        /></a>
+
+        <div class="menu-lists">
+          <li><a href="">Home</a></li>
+          <li><a href="">Products</a></li>
+          <li><a href="">Company</a></li>
+          <li><a href="">FAQs</a></li>
+          <li><a href="">Resources</a></li>
+        </div>
+
+        <div class="btn-icons">
+          <a href="" class="signin">Sign in</a>
+          <a href="" class="create">Create free account</a>
+          <a href=""><i class="fa-solid fa-bars"></i></a>
+        </div>
+      </nav>
+    </header>
+
+    <!-- HERO-SECTION -->
+
+    <section class="hero-sect">
+      <div class="hero">
+
+        <div class="hero-left">
+          <h1 class="hero-text">Buy & Sell Unused <span>gift cards</span></h1>
+
+          <p>
+            Purchase gadgets like smartphones, laptops, AirPods, game consoles,and appliances at competitive prices.
+          </p>
+
+          <div class="download">
+            <img src="./images/hero-google.png" alt="" width="150px" />
+            <img src="./images/hero-apple.png" alt="" width="150px" />
+          </div>
+        </div>
+
+        <div class="hero-right">
+
+          <div class="hero-image">
+            <img src="./images/hero-people.png" alt="" class="hero-people">
+
+            <div class="hero-cards">
+              <img src="./images/hero-dollar-card.png" alt="" class="hero-dollar" width="150px">
+              <img src="./images/hero-cardify-bills.png" alt="" class="hero-bill1" width="150px">
+              <img src="./images/hero-cardify-bills.png" alt="" class="hero-bill2" width="150px">
+              <img src="./images/hero-business_card.png" alt="" class="hero-business" width="150px">
+              <img src="./images/hero-gift-card.png" alt="" class="hero-gift" width="150px">
+            </div>
+
+          </div>
+        </div>
+
+      </div>
+    </section>
+  </body>
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+    crossorigin="anonymous"
+  ></script>
 </html>
