--- a/index.html
+++ b/index.html
@@ -85,6 +85,40 @@
 
       </div>
     </section>
+
+    <!-- SECTION TWO -->
+
+    <section class="sect-2">
+
+      <div class="join">
+
+        <div class="join-text">
+          <h2>Join the cardify tribe</h2>
+
+          <p>Create & Fund Virtual Dollar Cards with NGN & USDT, Buy & Sell Gift Cards, Pay Local & International Bills, and Access Digital Business Cards in Nigeria. Become Part of Our Community on <span>circle </span>today!.</p>
+        </div>
+
+        <div class="assets">
+
+          <div class="asset">
+            <h2>100k+</h2>
+            <p>Verified Users</p>
+          </div>
+
+          <div class="asset">
+            <h2>5+</h2>
+            <p>Assets Supported</p>
+          </div>
+
+          <div class="asset">
+            <h2>1m+</h2>
+            <p>No of Transactions</p>
+          </div>
+          
+        </div>
+
+      </div>
+    </section>
   </body>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
