--- a/index.html
+++ b/index.html
@@ -119,6 +119,50 @@
 
       </div>
     </section>
+
+
+    <!-- SECTION THREE -->
+
+    <!-- <section class="sect-3">
+      <div class="virtual">
+        <div class=" virtual-card virtual-text">
+          <h2>5 solutions just for you</h2>
+          <p>Discover Tailored Solutions Crafted for Your Unique</p>
+          <p>Needs: Virtual Dollar Cards, Gift Card Trading, Bill Payments, and More.</p>
+        </div>
+
+        <div class="virtual-card green-card">
+
+        </div>
+      </div>
+
+
+    </section> -->
+
+
+
+    <!-- SECTION FOUR -->
+
+    <section class="sect-4">
+      <div class="vibrant-text">
+        <h2>A vibrant community of the #Cardified</h2>
+        <p>The platform created simply for you!</p>
+      </div>
+
+      <div class="vibrant-card">
+        <div class="community-text">
+          <h1>Cardify is more than a platform, it's a lifestyle!</h1>
+          <p>Join the vibrant Cardify community on Circle to connect, share experiences, and stay updated with the latest features and benefits.</p>
+
+          <a href="" class="visit-link">↳ Visit Cardify Community On Circle</a>
+        </div>
+
+        <div class="vibrant-image">
+          <img src="./images/green-image.png" alt="" width="320px">
+        </div>
+      </div>
+    </section>
+
   </body>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
