--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <li><a href="">Home</a></li>
           <li><a href="">Products</a></li>
           <li><a href="">Company</a></li>
-          <li><a href="">FAQs</a></li>
+          <li><a href="./otherhtmlpages/faqs.html">FAQs</a></li>
           <li><a href="">Resources</a></li>
         </div>
 
@@ -160,6 +160,45 @@
         <div class="vibrant-image">
           <img src="./images/green-image.png" alt="" width="320px">
         </div>
+      </div>
+    </section>
+
+
+    <!-- SECTION FIVE -->
+
+    <section class="sect-5">
+
+      <div class="meet-text">
+        <h1>Meet Our Users of the Half</h1>
+        <p>Every Six Months, We Spotlight Select Cardify Users, Sharing Their Experiences and How Cardify Africa Has Enhanced Their Lives.</p>
+      </div>
+
+      <div class="meet-users">
+
+        <div class="card" style="width: 20rem;">
+          <!-- <img src="..." class="card-img-top" alt="..."> -->
+          <iframe src="https://youtu.be/8raJEl-mB3A?list=PL6eY_AlbQfP5CSX4-DqdeRxhIXzD9OS9m" frameborder="0"></iframe>
+          <div class="card-body">
+            <h5 class="card-title">Youtube Content Creator shares experience</h5>
+            <p class="card-text">Opeyemi Habibat, a YouTube content creator, shares her Cardify experience and how Cardify Africa has enhanced her work.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+
+        <div class="meet-card">
+
+          <div class="meet-image">
+            <img src="" alt="">
+          </div>
+
+          <div class="meet-body">
+            <h5>Youtube Content Creator shares experience</h5>
+            <p>Opeyemi Habibat, a YouTube content creator, shares her Cardify experience and how Cardify Africa has enhanced her work.</p>
+            <a href="" class="meet-btn">Watch Video</a>
+          </div>
+
+        </div>
+        
       </div>
     </section>
 
