--- a/otherhtmlpages/faqs.html
+++ b/otherhtmlpages/faqs.html
@@ -69,8 +69,8 @@
       <div class="about-cardify">
         <div class="row">
           <!-- Left side nav -->
-          <div class="col-auto">
-            <div class="list-group" id="list-tab" role="tablist">
+          <div class="col-md-5">
+            <div class="list-group custom-list-group" id="list-tab" role="tablist">
               <a
                 class="list-group-item list-group-item-action active"
                 id="list-about-list"
@@ -123,7 +123,7 @@
           </div>
 
           <!-- Right side tab content -->
-          <div class="right-cardify col-auto">
+          <div class="right-cardify col-md-7">
             <div class="tab-content" id="nav-tabContent">
               <div class="tab-pane fade show active" id="list-about" role="tabpanel">
                 
@@ -135,7 +135,16 @@
                         </button>
                         </h2>
                         <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                        <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item’s accordion body.</div>
+                        <div class="accordion-body">
+
+                            <h6>What is Cardify Africa?</h6>
+
+                            <p>Cardify Africa is a digital wallet platform designed to help users manage their funds across various digital wallets. It aims to simplify spending across different fiat and digital currency wallets, offering flexibility and efficiency. Users can access Cardify Africa through its website at www.cardify.co (with extensions .ng, .africa, .com.ng) or by downloading the app from app stores by searching for "Cardify Africa."</p>
+
+                            <h6>What products does Cardify Africa offer?</h6>
+
+                            <p>Cardify Africa offers a range of products tailored to meet users' financial needs:</p>
+                        </div>
                         </div>
                     </div>
                     <div class="accordion-item">
