--- a/otherhtmlpages/faqs.html
+++ b/otherhtmlpages/faqs.html
@@ -37,8 +37,8 @@
           <li><a href="../index.html">Home</a></li>
           <li><a href="">Products</a></li>
           <li><a href="">Company</a></li>
-          <li><a href="./otherhtmlpages/faqs.html">FAQs</a></li>
-          <li><a href="">Resources</a></li>
+          <li><a href="./faqs.html">FAQs</a></li>
+          <li><a href="./resources.html">Resources</a></li>
         </div>
 
         <div class="btn-icons">
@@ -144,6 +144,10 @@
                             <h6>What products does Cardify Africa offer?</h6>
 
                             <p>Cardify Africa offers a range of products tailored to meet users' financial needs:</p>
+
+                            <li><span>Cardify Virtual Dollar Cards:</span> Users can create and fund virtual dollar cards with NGN and USDT, usable for international online purchases where debit cards are accepted.</li>
+
+                            <li><span>Cardify Bills:</span>This system enables users to top up, pay bills, and purchase vouchers using NGN and USDT, supporting mobile top-ups, bill payments, and voucher purchases in various currencies.</li>
                         </div>
                         </div>
                     </div>
@@ -212,6 +216,61 @@
         </div>
       </div>
     </section>
+
+
+    <!-- SECTION THREE -->
+
+    <section class="sect-3">
+
+      <div class="visit-cardify">
+
+        <div class="cardifys">
+          <div>
+            <img src="../images/blog-icon.png" alt="" class="cardifys-icon">
+          </div>
+
+          <div class="visit-text">
+            <span>Cardify Blog</span>
+            <p>Stay updated with the latest news, tips, and insights from Cardify. Explore in-depth articles covering digital wallets, virtual cards, and more to enhance your financial management skills.</p>
+            <a href=""> <img src="../images/visit-icon.png" alt=""> Visit cardify blog</a>
+          </div>
+        </div>
+
+        <div class="cardifys">
+          <div>
+            <img src="../images/channel-icon.png" alt="" class="cardifys-icon">
+          </div>
+          <div class="visit-text">
+            <span>Cardify Youtube Channel</span>
+            <p>Watch tutorials, product reviews, and informative videos about Cardify's features. Subscribe to our channel for regular updates and in-depth content to make the most out of Cardify.</p>
+            <a href=""> <img src="../images/visit-icon.png" alt=""> Visit cardify youtube channel</a>
+          </div>
+        </div>
+
+        <div class="cardifys">
+          <div>
+            <img src="../images/knowledge-icon.png" alt="" class="cardifys-icon">
+          </div>
+          <div class="visit-text">
+            <span>Cardify Knowledgebase</span>
+            <p>Find answers to your questions with our comprehensive knowledgebase. Access detailed guides, FAQs, and support resources to ensure seamless usage of all Cardify features and services.</p>
+            <a href=""> <img src="../images/visit-icon.png" alt=""> Visit cardify knowledgebase</a>
+          </div>
+        </div>
+
+        <div class="cardifys">
+          <div class="">
+            <img src="../images/link-icon.png" alt="" class="cardifys-icon">
+          </div>
+          <div class="visit-text">
+            <span>Cardify Links</span>
+            <p>Discover all Cardify-related resources and tools in one convenient place. Access useful links for quick navigation and a richer user experience, ensuring you get the most out of Cardify.</p>
+            <a href=""> <img src="../images/visit-icon.png" alt=""> Visit cardify links</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
   </body>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
