--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
         /></a>
 
         <div class="menu-lists">
-          <li><a href="">Home</a></li>
+          <li><a href="./index.html">Home</a></li>
           <li><a href="">Products</a></li>
           <li><a href="">Company</a></li>
           <li><a href="./otherhtmlpages/faqs.html">FAQs</a></li>
-          <li><a href="">Resources</a></li>
+          <li><a href="./otherhtmlpages/resources.html">Resources</a></li>
         </div>
 
         <div class="btn-icons">
@@ -199,6 +199,60 @@
 
         </div>
         
+      </div>
+    </section>
+
+
+        <!-- SECTION SIX-->
+
+    <section class="sect-6">
+
+      <div class="visit-cardify">
+
+        <div class="cardifys">
+          <div>
+            <img src="../images/blog-icon.png" alt="" class="cardifys-icon">
+          </div>
+
+          <div class="visit-text">
+            <span>Cardify Blog</span>
+            <p>Stay updated with the latest news, tips, and insights from Cardify. Explore in-depth articles covering digital wallets, virtual cards, and more to enhance your financial management skills.</p>
+            <a href=""> <img src="../images/visit-icon.png" alt=""> Visit cardify blog</a>
+          </div>
+        </div>
+
+        <div class="cardifys">
+          <div>
+            <img src="../images/channel-icon.png" alt="" class="cardifys-icon">
+          </div>
+          <div class="visit-text">
+            <span>Cardify Youtube Channel</span>
+            <p>Watch tutorials, product reviews, and informative videos about Cardify's features. Subscribe to our channel for regular updates and in-depth content to make the most out of Cardify.</p>
+            <a href=""> <img src="../images/visit-icon.png" alt=""> Visit cardify youtube channel</a>
+          </div>
+        </div>
+
+        <div class="cardifys">
+          <div>
+            <img src="../images/knowledge-icon.png" alt="" class="cardifys-icon">
+          </div>
+          <div class="visit-text">
+            <span>Cardify Knowledgebase</span>
+            <p>Find answers to your questions with our comprehensive knowledgebase. Access detailed guides, FAQs, and support resources to ensure seamless usage of all Cardify features and services.</p>
+            <a href=""> <img src="../images/visit-icon.png" alt=""> Visit cardify knowledgebase</a>
+          </div>
+        </div>
+
+        <div class="cardifys">
+          <div class="">
+            <img src="../images/link-icon.png" alt="" class="cardifys-icon">
+          </div>
+          <div class="visit-text">
+            <span>Cardify Links</span>
+            <p>Discover all Cardify-related resources and tools in one convenient place. Access useful links for quick navigation and a richer user experience, ensuring you get the most out of Cardify.</p>
+            <a href=""> <img src="../images/visit-icon.png" alt=""> Visit cardify links</a>
+          </div>
+        </div>
       </div>
     </section>
 
