--- a/otherhtmlpages/company.html
+++ b/otherhtmlpages/company.html
@@ -22,7 +22,7 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="../othercsspages/resources.css">
+    <link rel="stylesheet" href="../othercsspages/company.css">
 </head>
 <body>
     
@@ -50,37 +50,18 @@
       </nav>
     </header>
 
-
-    <!-- HERO-SECT -->
-
     <section class="hero-sect">
-        <div class="csr">
-            <div class="csr-text">
-                <div class="cardify-csr">
-                    <span>Cardify CSR</span>
-                </div>
-                <h1>Coorperate Social Responsibilities with Cardify.</h1>
-            </div>
+        <div class="contact">
+            <span class="yours">Cardify yours at <a href="">business.cardify.co./setup</a></span>
 
-            <div class="csr-images">
-                <div class="csr-image">
-                    <img src="../images/image-1.png" alt="">
-                </div>
+            <h1> You can actually contact us through our <span>cardify </span>digital business card below.</h1>
 
-                <div class="csr-image">
-                    <img src="../images/image-2.png" alt="">
-                    <img src="../images/image-3.png" alt="">
-                    <img src="../images/image-4.png" alt="">
-                </div>
-
-                <div class="csr-image">
-                    <img src="../images/image-5.png" alt="">
-                    <img src="../images/image-6.png" alt="">
-                    <img src="../images/image-7.png" alt="">
-                </div>
+            <div>
+                <img src="../images/contactus.png" alt="" width="340px">
             </div>
         </div>
     </section>
+
 
     <!-- SECTION TWO -->
 
