--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="menu-lists">
           <li><a href="./index.html">Home</a></li>
           <li><a href="">Products</a></li>
-          <li><a href="">Company</a></li>
+          <li><a href="./otherhtmlpages/company.html">Company</a></li>
           <li><a href="./otherhtmlpages/faqs.html">FAQs</a></li>
           <li><a href="./otherhtmlpages/resources.html">Resources</a></li>
         </div>
