--- a/otherhtmlpages/company.html
+++ b/otherhtmlpages/company.html
@@ -60,6 +60,12 @@
                 <img src="../images/contactus.png" alt="" width="340px">
             </div>
         </div>
+        <div class="shapes">
+            <img src="../images/purple-plus-square.png" alt="" class="purple-square">
+            <img src="../images/blue-circle.png" alt="" class="blue-circle">
+            <img src="../images/green-circle.png" alt="" class="green-circle">
+            <img src="../images/pink-circle.png" alt="" class="pink-circle">
+        </div>
     </section>
 
 
@@ -116,6 +122,29 @@
       </div>
     </section>
 
+
+    <!-- FOOTER -->
+
+    <footer>
+      <div class="footer-wrap">
+
+        <h2 class="footer-head">As featured in</h2>
+      
+        <div class="footer-images">
+          <div class="footer-image">
+            <img src="../images/techPointAfrica.png" alt="">
+            <img src="../images/theGuardian.png" alt="">
+            <img src="../images/techCrunch.png" alt="">
+            <img src="../images/businessDay.png" alt="">
+            <img src="../images/nigeriaTribune.png" alt="">
+            <img src="../images/techCabal.png" alt="">
+          </div>
+        </div>
+
+        <div class="footer-line1"></div>
+      </div>
+    </footer>
+    
 </body>
 <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
