--- a/otherhtmlpages/faqs.html
+++ b/otherhtmlpages/faqs.html
@@ -271,6 +271,26 @@
       </div>
     </section>
 
+
+    <footer>
+      <div class="footer-wrap">
+
+        <h2 class="footer-head">As featured in</h2>
+      
+        <div class="footer-images">
+          <div class="footer-image">
+            <img src="../images/techPointAfrica.png" alt="">
+            <img src="../images/theGuardian.png" alt="">
+            <img src="../images/techCrunch.png" alt="">
+            <img src="../images/businessDay.png" alt="">
+            <img src="../images/nigeriaTribune.png" alt="">
+            <img src="../images/techCabal.png" alt="">
+          </div>
+        </div>
+
+        <div class="footer-line1"></div>
+      </div>
+    </footer>
   </body>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
