--- a/otherhtmlpages/company.html
+++ b/otherhtmlpages/company.html
@@ -36,7 +36,7 @@
 
         <div class="menu-lists">
           <li><a href="../index.html">Home</a></li>
-          <li><a href="">Products</a></li>
+          <li><a href="./products.html">Products</a></li>
           <li><a href="./company.html">Company</a></li>
           <li><a href="./faqs.html">FAQs</a></li>
           <li><a href="./resources.html">Resources</a></li>
@@ -142,6 +142,61 @@
         </div>
 
         <div class="footer-line1"></div>
+
+        <div class="footer-infos">
+
+          <div class="footer-left">
+
+            <div class="footer-logo">
+              <img src="../images/cardify-logo.png" alt="" width="160px">
+              <img src="../images/Audit-Cut.png" alt="" width="140px">
+            </div>
+
+            <div class="footer-products">
+              <p>Products</p>
+              <li><a href="">Virtual Dollar Cards</a></li>
+              <li><a href="">Cardify Bills</a></li>
+              <li><a href="">Cardify Gift Cards</a></li>
+              <li><a href="">Cardify Business Cards</a></li>
+              <li><a href="">Cardify Store</a></li>
+            </div>
+
+            <div class="footer-company">
+              <p>Company</p>
+              <li><a href="">About</a></li>
+              <li><a href="">Contact us</a></li>
+              <li><a href="">Careers</a></li>
+              <li><a href="">Blog</a></li>
+            </div>
+          </div>
+
+          <div class="footer-legal">
+            <p>Legal</p>
+            <li><a href="">Privacy Policy</a></li>
+            <li><a href="">Terms</a></li>
+            <li><a href="">Aml & kyc policy</a></li>
+            <li><a href="">Risk warning</a></li>
+          </div>
+
+          <div class="footer-icons">
+            <div class="footer-icon">
+              <a href="" class="footer-brand"><i class="fa-brands fa-facebook-f"></i></a>
+              <a href="" class="footer-brand"><i class="fa-brands fa-instagram"></i></a>
+              <a href="" class="footer-brand"><i class="fa-brands fa-twitter"></i></a>
+              <a href="" class="footer-brand"><i class="fa-brands fa-tiktok"></i></a>
+              <a href="" class="footer-brand"><i class="fa-brands fa-youtube"></i></a>
+            </div>
+
+            <div class="footer-links">
+              <a href="" class="linktree">Our Links: Linktr.ee/cardifyafrica</a> <br>
+              <a href="" class="support">support@cardify.co</a><br>
+
+              <li class="cardi-afri"><a href="" class="africa">@cardifyafrica</a></li>
+            </div>
+          </div>
+
+        </div>
+
       </div>
     </footer>
     
