--- a/otherhtmlpages/resources.html
+++ b/otherhtmlpages/resources.html
@@ -36,7 +36,7 @@
 
         <div class="menu-lists">
           <li><a href="../index.html">Home</a></li>
-          <li><a href="">Products</a></li>
+          <li><a href="./products.html">Products</a></li>
           <li><a href="./company.html">Company</a></li>
           <li><a href="./faqs.html">FAQs</a></li>
           <li><a href="./resources.html">Resources</a></li>
