--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <div class="menu-lists">
           <li><a href="./index.html">Home</a></li>
-          <li><a href="">Products</a></li>
+          <li><a href="./otherhtmlpages/products.html">Products</a></li>
           <li><a href="./otherhtmlpages/company.html">Company</a></li>
           <li><a href="./otherhtmlpages/faqs.html">FAQs</a></li>
           <li><a href="./otherhtmlpages/resources.html">Resources</a></li>
