--- a/otherhtmlpages/products.html
+++ b/otherhtmlpages/products.html
@@ -49,5 +49,35 @@
         </div>
       </nav>
     </header>
+
+    <!-- HERO_SECT -->
+
+    <section class="hero-sect">
+        <div class="hero">
+            <div class="hero-left">
+                <h1>Top Up, Pay Bills, and Buy Vouchers with NGN & USDT</h1>
+                <div class="hero-flags">
+                    <div class="hero-flag">
+                        <img src="../images/naija.png" alt="" width="50px">
+                        <img src="../images/ghana.png" alt="" width="50px">
+                        <img src="../images/keyan.png" alt="" width="50px">
+                    </div>
+                    <span>Pay bills</span>
+                    <p>Effortlessly Top Up, Pay Bills, and Purchase Vouchers with NGN & USDT for All Your Needs.</p>
+                </div>
+                <div class="download">
+                    <img src="../images/hero-google.png" alt="" width="150px">
+                    <img src="../images/hero-apple.png" alt="" width="150px">
+                </div>
+            </div>
+
+            <div class="hero-right">
+                <img src="../images/hero-phone-image.png" alt=""  class="phone-image">
+                <img src="../images/coin bg.png" alt=""  class="coin-whistle">
+            </div>
+        </div>
+    </section>
+    <!-- width="350px" -->
+     <!-- width="250px" -->
 </body>
 </html>
