--- a/otherhtmlpages/products.html
+++ b/otherhtmlpages/products.html
@@ -120,7 +120,9 @@
             
             <p>Earn cashback every time you pay bills on Cardify. Save money while managing your expenses effortlessly with our rewarding payment system.</p>
 
-            <img src="../images/phone-image-three.png" alt="" class="bill-img2" >
+            <div class="phone-frame2">
+              <img src="../images/phone-image-three.png" alt="" >
+            </div>
           </div>
         </div>
       </div>
