--- a/otherhtmlpages/products.html
+++ b/otherhtmlpages/products.html
@@ -127,8 +127,105 @@
         </div>
       </div>
     </section>
-    <!-- width="350px" -->
-     <!-- width="250px" -->
+
+    <!-- SECTION THREE -->
+
+    <section class="sect-3">
+      <div class="client-text">
+         <h2>No bound to paying bills</h2>
+         <p>At Cardify, we believe there should be no bounds to paying bills. Whether you're in Nigeria, Ghana, Kenya, or beyond, pay your bills effortlessly with Cardify.</p>
+      </div>
+
+      <div class="client">
+        <img src="../images/smiling-client.png" alt="">
+      </div>
+    </section>
+
+    <!-- SECTION FOUR -->
+
+    <section class="sect-4">
+
+      <h1>Paying Bills on Cardify Africa with #Yemisi</h1>
+
+      <div class="yemisi">
+        <iframe width="900" height="515" src="https://www.youtube.com/embed/uLfsJPfdHKM?si=7hetnQRmMIputOla" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      </div>
+    </section>
+
+
+    <!-- SECTION FIVE-->
+
+    <section class="sect-5">
+
+      <div class="visit-cardify">
+
+        <div class="cardifys">
+          <div>
+            <img src="../images/blog-icon.png" alt="" class="cardifys-icon">
+          </div>
+
+          <div class="visit-text">
+            <span>Cardify Blog</span>
+            <p>Stay updated with the latest news, tips, and insights from Cardify. Explore in-depth articles covering digital wallets, virtual cards, and more to enhance your financial management skills.</p>
+            <a href=""> <img src="../images/visit-icon.png" alt=""> Visit cardify blog</a>
+          </div>
+        </div>
+
+        <div class="cardifys">
+          <div>
+            <img src="../images/channel-icon.png" alt="" class="cardifys-icon">
+          </div>
+          <div class="visit-text">
+            <span>Cardify Youtube Channel</span>
+            <p>Watch tutorials, product reviews, and informative videos about Cardify's features. Subscribe to our channel for regular updates and in-depth content to make the most out of Cardify.</p>
+            <a href=""> <img src="../images/visit-icon.png" alt=""> Visit cardify youtube channel</a>
+          </div>
+        </div>
+
+        <div class="cardifys">
+          <div>
+            <img src="../images/knowledge-icon.png" alt="" class="cardifys-icon">
+          </div>
+          <div class="visit-text">
+            <span>Cardify Knowledgebase</span>
+            <p>Find answers to your questions with our comprehensive knowledgebase. Access detailed guides, FAQs, and support resources to ensure seamless usage of all Cardify features and services.</p>
+            <a href=""> <img src="../images/visit-icon.png" alt=""> Visit cardify knowledgebase</a>
+          </div>
+        </div>
+
+        <div class="cardifys">
+          <div class="">
+            <img src="../images/link-icon.png" alt="" class="cardifys-icon">
+          </div>
+          <div class="visit-text">
+            <span>Cardify Links</span>
+            <p>Discover all Cardify-related resources and tools in one convenient place. Access useful links for quick navigation and a richer user experience, ensuring you get the most out of Cardify.</p>
+            <a href=""> <img src="../images/visit-icon.png" alt=""> Visit cardify links</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+    <footer>
+      <div class="footer-wrap">
+
+        <h2 class="footer-head">As featured in</h2>
+      
+        <div class="footer-images">
+          <div class="footer-image">
+            <img src="../images/techPointAfrica.png" alt="">
+            <img src="../images/theGuardian.png" alt="">
+            <img src="../images/techCrunch.png" alt="">
+            <img src="../images/businessDay.png" alt="">
+            <img src="../images/nigeriaTribune.png" alt="">
+            <img src="../images/techCabal.png" alt="">
+          </div>
+        </div>
+
+        <div class="footer-line1"></div>
+      </div>
+    </footer>
 </body>
 <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
