--- a/otherhtmlpages/cards.html
+++ b/otherhtmlpages/cards.html
@@ -88,5 +88,90 @@
       </div>
     </div>
   </section>
+
+
+  <section class="virtual-container">
+      <!-- Top Left Text Card -->
+      <div class="virtual text-virtual">
+        <h2>5 solutions just for you</h2>
+        <p>Discover Tailored Solutions Crafted for Your Unique Needs: Virtual Dollar Cards, Gift Card Trading, Bill Payments, and More.</p>
+      </div>
+
+      <!-- Top Right Green Card -->
+      <div class="virtual green-virtual">
+        <div class="green-text">
+          <h2>Virtual Dollar Cards</h2>
+          <p>Enjoy Seamless International Transactions by Creating and Funding Your Cards with NGN & USDT.</p>
+          <div class="virtual-links">
+            
+          </div>
+        </div>
+        <div class="green-image">
+          <img src="./images/green-img.png" alt="Card Preview" />
+        </div>
+      </div>
+
+      <!-- MIDDLE Left Blue Card -->
+      <div class="virtual blue-virtual">
+        <div class="blue-textone">
+          <h2>Cardify Bills</h2>
+          <p>Effortlessly Top Up, Pay Bills, and Purchase Vouchers with NGN & USDT for All Your Local and International Bill Payment Needs.</p>
+          <div class="virtual-links">
+            <a href="#">↳ Explore Cardify Bills</a><br>
+            <a href="#">↳ Watch Video <span>▶️</span></a>
+          </div>
+        </div>
+
+        <div class="blue-imgone">
+          <img src="./images/blue-imgone.png" alt="">
+        </div>
+      </div>
+
+      <!-- MIDDLE Right Pink Card -->
+      <div class="virtual pink-virtual">
+      <div class="pink-text">
+        <h2>Buy & Sell Gift Cards</h2>
+          <p>Buy Popular Digital Gift Cards and Effortlessly Trade Unused Gift Cards for NGN or USDT.</p>
+          <div class="virtual-links">
+            <a href="#">↳ Explore Cardify Gift Cards</a><br>
+            <a href="#">↳ Watch Video <span>▶️</span></a>
+          </div>
+      </div>
+
+      <div class="pink-img">
+        <img src="./images/pink-img.png" alt="">
+      </div>
+      </div>
+
+      <div class="virtual purple-virtual">
+        <div class="purple-text">
+          <h2>Digital Business Card</h2>
+          <p>Effortlessly Connect with Digital Business Cards for Seamless Networking Experiences.</p>
+          <div class="virtual-links">
+            <a href="#">↳ Explore Cardify Digital Business Cards</a><br>
+            <a href="#">↳ Watch Video <span>▶️</span></a>
+          </div>
+        </div>
+        <div class="purple-img">
+          <img src="./images/purple-img.png" alt="">
+        </div>
+      </div>
+
+      <div class="virtual blue-virtualtwo">
+        <div class="blue-text">
+          <h2>Buy Tech Gadgets</h2>
+          <p>Purchase Gadgets Like Smartphones, Laptops, AirPods, Game Consoles, and Appliances at Competitive Prices with NGN & USDT</p>
+          <div class="virtual-links">
+            <a href="#">↳ Explore Cardify Store</a><br>
+            <a href="#">↳ Watch Video <span>▶️</span></a>
+          </div>
+        </div>
+
+        <div class="blue-imgtwo">
+          <img src="./images/blue-imgtwo.png" alt="">
+        </div>
+      </div>
+    </section>
+
 </body>
 </html>
