--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
       referrerpolicy="no-referrer"
     />
 
-    <!-- <link
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
       crossorigin="anonymous"
-    /> -->
+    />
 
     <link rel="stylesheet" href="./landingpage.css" />
   </head>
@@ -34,8 +34,50 @@
         /></a>
 
         <div class="menu-lists">
+
           <li><a href="./index.html">Home</a></li>
-          <li><a href="./otherhtmlpages/products.html">Products</a></li>
+
+          <li class="product"><a href="./otherhtmlpages/products.html">Products</a>
+
+            <ul class="product-drop">
+              <li><a href="">
+                <span>Dollar Cards</span>
+                <p>Create & fund dollar cards with NGN & USDT</p>
+              </a></li>
+
+              <li><a href="">
+                <span>Digital Cards</span>
+                <p>Get & link a digital business card</p>
+              </a></li>
+
+              <li><a href="">
+                <span>Bills</span>
+                <p>Pay bills with NGN & USDT</p>
+              </a></li>
+
+              <li><a href="">
+                <span>Cardify Store</span>
+                <p>Buy select tech gadgets and items with cardify store</p>
+              </a></li>
+
+              <li><a href="">
+                <span>Gift Cards</span>
+                <p>Buy & sell unused gift cards</p>
+              </a></li>
+
+              <li><a href="">
+                <span>Prepaid Cards (New)</span>
+                <p>Create a prepaid dollar card with USDT</p>
+              </a></li>
+
+              <li><a href="">
+                <span>Foreign Bank Accounts (New)</span>
+                <p>Create USD & EUR Bank account in Nigeria</p>
+              </a></li>
+
+            </ul>
+          </li>
+
           <li><a href="./otherhtmlpages/company.html">Company</a></li>
           <li><a href="./otherhtmlpages/faqs.html">FAQs</a></li>
           <li><a href="./otherhtmlpages/resources.html">Resources</a></li>
@@ -260,7 +302,34 @@
       </div>
     </section>
 
+    <!-- SECT-SEVEN -->
 
+    <section class="sect-7">
+      <div class="people-container">
+        <div class="people-left">
+          <img src="./images/pre-footer-image-phone.png" alt="">
+        </div>
+
+        <div class="people-right">
+          <div class="people-images">
+            <img src="./images/people-image_1.png" alt="" class="pic-1">
+            <img src="./images/people-image_2.png" alt="" class="pic-2">
+            <img src="./images/people-image_3.png" alt="" class="pic-3">
+            <img src="./images/people-image_4.png" alt="" class="pic-4">
+            <img src="./images/people-image_5.png" alt="" class="pic-5">
+          </div>
+
+          <div class="people-text">
+            <h2>Join 100k+ people who uses Cardify Africa.</h2>
+          </div>
+
+          <div class="people-links">
+            <a href="" class="people-download"><img src="./images/people-apple-icon.png" alt="" width="20px"> Get on iphone</a>
+            <a href="" class="people-download"><img src="./images/people-playstore-icon.png" alt="" width="20px"> Get on Android</a>
+          </div>
+        </div>
+      </div>
+    </section>
     <footer>
       <div class="footer-wrap">
 
