--- a/otherhtmlpages/faqs.html
+++ b/otherhtmlpages/faqs.html
@@ -272,6 +272,36 @@
     </section>
 
 
+    <!-- SECTION-FOUR -->
+
+    <section class="sect-4">
+      <div class="people-container">
+        <div class="people-left">
+          <img src="../images/pre-footer-image-phone.png" alt="">
+        </div>
+
+        <div class="people-right">
+          <div class="people-images">
+            <img src="../images/people-image_1.png" alt="" class="pic-1">
+            <img src="../images/people-image_2.png" alt="" class="pic-2">
+            <img src="../images/people-image_3.png" alt="" class="pic-3">
+            <img src="../images/people-image_4.png" alt="" class="pic-4">
+            <img src="../images/people-image_5.png" alt="" class="pic-5">
+          </div>
+
+          <div class="people-text">
+            <h2>Join 100k+ people who uses Cardify Africa.</h2>
+          </div>
+
+          <div class="people-links">
+            <a href="" class="people-download"><img src="../images/people-apple-icon.png" alt="" width="20px"> Get on iphone</a>
+            <a href="" class="people-download"><img src="../images/people-playstore-icon.png" alt="" width="20px"> Get on Android</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- FOOTER -->
     <footer>
       <div class="footer-wrap">
 
