--- a/otherhtmlpages/products.html
+++ b/otherhtmlpages/products.html
@@ -206,6 +206,33 @@
       </div>
     </section>
 
+    <!-- SECTION-SIX -->
+    <section class="sect-6">
+      <div class="people-container">
+        <div class="people-left">
+          <img src="../images/pre-footer-image-phone.png" alt="">
+        </div>
+
+        <div class="people-right">
+          <div class="people-images">
+            <img src="../images/people-image_1.png" alt="" class="pice-1">
+            <img src="../images/people-image_2.png" alt="" class="pice-2">
+            <img src="../images/people-image_3.png" alt="" class="pice-3">
+            <img src="../images/people-image_4.png" alt="" class="pice-4">
+            <img src="../images/people-image_5.png" alt="" class="pice-5">
+          </div>
+
+          <div class="people-text">
+            <h2>Join 100k+ people who uses Cardify Africa.</h2>
+          </div>
+
+          <div class="people-links">
+            <a href="" class="people-download"><img src="../images/people-apple-icon.png" alt="" width="20px"> Get on iphone</a>
+            <a href="" class="people-download"><img src="../images/people-playstore-icon.png" alt="" width="20px"> Get on Android</a>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <footer>
       <div class="footer-wrap">
