--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
     <header>
       <nav class="nav-links">
         <a href=""
-          ><img src="./images/cardify-logo.png" alt="" width="150px"
+          ><img src="../images/cardify-logo.png" alt="" width="150px"
         /></a>
 
         <div class="menu-lists">
-
           <li><a href="./index.html">Home</a></li>
 
-          <li class="product"><a href="./otherhtmlpages/products.html">Products</a>
+          <li class="product">
+            <a href="">Products</a>
 
             <ul class="product-drop">
               <li><a href="">
@@ -50,7 +50,7 @@
                 <p>Get & link a digital business card</p>
               </a></li>
 
-              <li><a href="">
+              <li><a href="./otherhtmlpages/products.html">
                 <span>Bills</span>
                 <p>Pay bills with NGN & USDT</p>
               </a></li>
@@ -78,9 +78,80 @@
             </ul>
           </li>
 
-          <li><a href="./otherhtmlpages/company.html">Company</a></li>
+          <li class="company">
+            <a href="">Company</a>
+            
+            <ul class="company-drop">
+              <li><a href="">
+                <span>About us</span>
+                <p>About Cardify Africa</p>
+              </a></li>
+
+              <li><a href="./otherhtmlpages/company.html">
+                <span>Contact us</span>
+                <p>Get in touch with Cardify Africa</p>
+              </a></li>
+
+              <li><a href="">
+                <span>Career</span>
+                <p>Career at Cardify Africa</p>
+              </a></li>
+            </ul>
+          </li>
+
           <li><a href="./otherhtmlpages/faqs.html">FAQs</a></li>
-          <li><a href="./otherhtmlpages/resources.html">Resources</a></li>
+
+          <li class="resources">
+            <a href="">Resources</a>
+
+            <ul class="resources-drop">
+              <li><a href="">
+                <span>Blog</span>
+                <p>Latest news, events, newsletters etc</p>
+              </a></li>
+
+              <li><a href="">
+                <span>Youtube Channel</span>
+                <p>Watch Cardify videos</p>
+              </a></li>
+
+              <li><a href="./otherhtmlpages/resources.html">
+                <span>Knowledgebase</span>
+                <p>How to articles and videos</p>
+              </a></li>
+
+              <li><a href="">
+                <span>Links</span>
+                <p>A list of Cardify links</p>
+              </a></li>
+
+              <li><a href="">
+                <span>Cardify CSR</span>
+                <p>Cooperate Social Responsibility</p>
+              </a></li>
+
+              <li><a href="">
+                <span>Brand Assets</span>
+                <p>Official brand assets</p>
+              </a></li>
+
+              <li><a href="">
+                <span>Cardify Event Videos</span>
+                <p>Official brand assets</p>
+              </a></li>
+
+              <li><a href="">
+                <span>Cardify Ambassadors</span>
+                <p>Hey, we have the best ambassadors</p>
+              </a></li>
+
+              <li><a href="">
+                <span>Human of Cardify</span>
+                <p>Very human oriented</p>
+              </a></li>
+            </ul>
+          </li>
+
         </div>
 
         <div class="btn-icons">
@@ -90,6 +161,7 @@
         </div>
       </nav>
     </header>
+
 
     <!-- HERO-SECTION -->
 
