--- a/otherhtmlpages/company.html
+++ b/otherhtmlpages/company.html
@@ -36,10 +36,123 @@
 
         <div class="menu-lists">
           <li><a href="../index.html">Home</a></li>
-          <li><a href="./products.html">Products</a></li>
-          <li><a href="./company.html">Company</a></li>
+
+          <li class="product">
+            <a href="">Products</a>
+
+            <ul class="product-drop">
+              <li><a href="">
+                <span>Dollar Cards</span>
+                <p>Create & fund dollar cards with NGN & USDT</p>
+              </a></li>
+
+              <li><a href="">
+                <span>Digital Cards</span>
+                <p>Get & link a digital business card</p>
+              </a></li>
+
+              <li><a href="./products.html">
+                <span>Bills</span>
+                <p>Pay bills with NGN & USDT</p>
+              </a></li>
+
+              <li><a href="">
+                <span>Cardify Store</span>
+                <p>Buy select tech gadgets and items with cardify store</p>
+              </a></li>
+
+              <li><a href="">
+                <span>Gift Cards</span>
+                <p>Buy & sell unused gift cards</p>
+              </a></li>
+
+              <li><a href="">
+                <span>Prepaid Cards (New)</span>
+                <p>Create a prepaid dollar card with USDT</p>
+              </a></li>
+
+              <li><a href="">
+                <span>Foreign Bank Accounts (New)</span>
+                <p>Create USD & EUR Bank account in Nigeria</p>
+              </a></li>
+
+            </ul>
+          </li>
+
+          <li class="company">
+            <a href="">Company</a>
+            
+            <ul class="company-drop">
+              <li><a href="">
+                <span>About us</span>
+                <p>About Cardify Africa</p>
+              </a></li>
+
+              <li><a href="./company.html">
+                <span>Contact us</span>
+                <p>Get in touch with Cardify Africa</p>
+              </a></li>
+
+              <li><a href="">
+                <span>Career</span>
+                <p>Career at Cardify Africa</p>
+              </a></li>
+            </ul>
+          </li>
+
           <li><a href="./faqs.html">FAQs</a></li>
-          <li><a href="./resources.html">Resources</a></li>
+
+          <li class="resources">
+            <a href="">Resources</a>
+
+            <ul class="resources-drop">
+              <li><a href="">
+                <span>Blog</span>
+                <p>Latest news, events, newsletters etc</p>
+              </a></li>
+
+              <li><a href="">
+                <span>Youtube Channel</span>
+                <p>Watch Cardify videos</p>
+              </a></li>
+
+              <li><a href="./resources.html">
+                <span>Knowledgebase</span>
+                <p>How to articles and videos</p>
+              </a></li>
+
+              <li><a href="">
+                <span>Links</span>
+                <p>A list of Cardify links</p>
+              </a></li>
+
+              <li><a href="">
+                <span>Cardify CSR</span>
+                <p>Cooperate Social Responsibility</p>
+              </a></li>
+
+              <li><a href="">
+                <span>Brand Assets</span>
+                <p>Official brand assets</p>
+              </a></li>
+
+              <li><a href="">
+                <span>Cardify Event Videos</span>
+                <p>Official brand assets</p>
+              </a></li>
+
+              <li><a href="">
+                <span>Cardify Ambassadors</span>
+                <p>Hey, we have the best ambassadors</p>
+              </a></li>
+
+              <li><a href="">
+                <span>Human of Cardify</span>
+                <p>Very human oriented</p>
+              </a></li>
+            </ul>
+          </li>
+
         </div>
 
         <div class="btn-icons">
@@ -50,6 +163,8 @@
       </nav>
     </header>
 
+    
+    <!-- HERO-SECT -->
     <section class="hero-sect">
         <div class="contact">
             <span class="yours">Cardify yours at <a href="">business.cardify.co./setup</a></span>
