--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Cardify Africa: Create & Fund Virtual Dollar Cards with NGN &USDT</title>
 
+    <link rel="shortcut icon" href="./images/cardify-icon.png" type="image/x-icon">
     
     <link href="https://fonts.cdnfonts.com/css/poppins" rel="stylesheet" />
 
@@ -30,7 +31,7 @@
 
     <header>
       <nav class="nav-links">
-        <a href=""
+        <a href="./index.html"
           ><img src="../images/cardify-logo.png" alt="" width="150px"
         /></a>
 
